# fp15-project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: build.yml
src/: CMakeLists.txt  main.c
src/badapple/: CMakeLists.txt
src/badapple/assets/: README.md  converter.ts
src/badapple/include/: badapple.h  bitset128.h  free.h
src/badapple/resources/: converter.ts
src/badapple/src/: badapple.c  bitset128.c
src/movie/: CMakeLists.txt
src/movie/include/: color.h  common.h  frame.h  movie.h  renderer.h
src/movie/src/: color.c  frame.c  movie.c
src/typography/: CMakeLists.txt
src/typography/font-bitmap/: package-lock.json  package.json
src/typography/font-bitmap/assets/: charset.txt
src/typography/font-bitmap/resources/: chardata.txt
src/typography/font-bitmap/src/: main.ts
src/typography/include/: font_bitmap.h
src/typography/src/: font_bitmap.c
